app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuonvakhim-portfolio-svc
spec:
  selector:
    app: nuonvakhim-portfolio
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
